--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/pizza.html">Easy Tortilla Pizza</a>
-    
+    <ul>
+        <li><a href="recipes/pizza.html">Easy Tortilla Pizza</a></li>
+        <li><a href="recipes/meatloaf.html">Classic Meatloaf</a></li>
+        <li><a href="recipes/jambalaya.html">Jambalaya Rice</a></li>
+    </ul>
 </body>
 </html>
