--- a/recipes/jambalaya.html
+++ b/recipes/jambalaya.html
@@ -6,13 +6,13 @@
     <title>Jambalaya Rice</title>
 </head>
 <body>
-    <h1>ambalaya Rice</h1>
+    <h1>Jambalaya Rice</h1>
     <img src="../img/jambalaya-rice.jpg" alt="Jambalaya Rice">
     <h2>Best jambalaya Rice</h2>
     <p>A spicy jambalaya with chicken, andouille sausage, rice, and Cajun seasonings that's easy to make in one pot.</p>
     <h3>Jambalaya Ingredients</h3>
     <p>These are the ingredients you will need for this homemade Jambalaya Rice:</p>
-    <ol>
+    <ul>
         <li>2 tablespoons peanut oil, divided</li>
         <li>1 tablespoon Cajun seasoning</li>
         <li>10 ounces andouille sausage, sliced into rounds</li>
@@ -30,9 +30,9 @@
         <li>1 teaspoon file powder</li>
         <li>1 and half cups uncooked white rice</li>
         <li>2 and half cups chicken broth</li>
-    </ol>
+    </ul>
     <h3>Steps on How to Make Jambalaya Rice</h3>
-    <ul>
+    <ol>
         <li>Gather all ingredients.</li>
         <li>Heat 1 tablespoon of peanut oil in a large heavy Dutch oven over medium heat. Season the sausage and chicken pieces with Cajun seasoning. Sauté sausage until browned. Remove with slotted spoon, and set aside.</li>
         <li>Add 1 tablespoon peanut oil, and sauté chicken pieces until lightly browned on all sides. Remove with a slotted spoon, and set aside.</li>
@@ -42,6 +42,6 @@
         <li>Stir in the rice and chicken broth.</li>
         <li>Bring to a boil, reduce heat, and simmer for 20 to 25 minutes, or until liquid is absorbed.</li>
         <li>Serve and enjoy!</li>
-    </ul>
+    </ol>
 </body>
 </html>
